feat: adds category and class id to attributes
